 * It is now easier to delete old groups.
 * Added substitutions "%d" for duration and "%k" for stacks.
 * Added events for duration and stack changes, and expanded event settings.
 * Performance Increase: Icons should no longer update themselves multiple times within one update period when the update interval is set to zero and the icon is being checked by multiple metas/conditions.
 * Bug Fixes:
 ** (r316) TellMeWhen_Options.lua:2831: attempt to index local "spaceControl" (a nil value)
 ** (r321) The runic power condition should now properly track runic power instead of mana.
 ** (r324) Meta icons should once again properly inherit colors from Masque.
 ** (r327) TellMeWhen_Options.lua line 3189: attempt to call method 'IsVisible' (a nil value)
 ** (r328) It should no longer be possible to have an icon shown condition check the icon that it is a child of.
 ** (r328) Switching profiles while TMW is unlocked should no longer cause icon coloring to malfunction.
 ** (r329) TellMeWhen-4.6.7.lua:3469: attempt to index local "settings" (a nil value)
 
===v4.6.7===
 * Bug Fixes:
 ** (r310) Fixed sound event text overflow bug
 ** (r311) Possibly fixed a bug that was causing the event settings of deleted groups to stick around
 ** (r312) Added Sudden Death/Colossus Smash to the cooldown reset tracker for Unit Cooldown icons
 ** (r313) TellMeWhen will no longer completely break when loading with ButtonFacade but not Masque installed
 
===v4.6.6===
 * The suggestion list has been completely rewritten, and many features have been added.
 * Seeing as Masque has been out for a month now, I think it is safe to say that ButtonFacade is now obsolete. Removed all support for ButtonFacade
 * Added a setting to make events only fire if the icon is shown.
 * Bug Fixes:
 ** (r300) default.lua:67: attempt to index local 'ics' (a nil value)
 ** (r301) TellMeWhen_Options-4.6.4.lua:5575 bad argument #1 to "pairs" (table expected, got nil)