@@ -8,6 +8,7 @@
  * Added substitutions "%d" for duration and "%k" for stacks.
  * Added events for duration and stack changes, and expanded event settings.
  * Performance Increase: Icons should no longer update themselves multiple times within one update period when the update interval is set to zero and the icon is being checked by multiple metas/conditions.
+ * You can now set a group as a component of a meta icon, causing the meta icon to check all icons that are part of the selected group.
  * Bug Fixes:
  ** (r316) TellMeWhen_Options.lua:2831: attempt to index local "spaceControl" (a nil value)
  ** (r321) The runic power condition should now properly track runic power instead of mana.
@@ -16,6 +17,7 @@
  ** (r328) It should no longer be possible to have an icon shown condition check the icon that it is a child of.
  ** (r328) Switching profiles while TMW is unlocked should no longer cause icon coloring to malfunction.
  ** (r329) TellMeWhen-4.6.7.lua:3469: attempt to index local "settings" (a nil value)
+ ** (r332) Binding/label text should now properly clear when resetting an icon.
  
 ===v4.6.7===
  * Bug Fixes:
